--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
       <script src="uikit-3.5.5/js/uikit.min.js"></script>
       <script src="uikit-3.5.5/js/uikit-icons.min.js"></script>
       <!-- LOC:SCRIPT -->
-      <script src="libbo.js?v=1602316548"></script>
-      <script src="dom.js?v=1602316548"></script>
-      <script src="api.js?v=1602316548"></script>
-      <script src="index.js?v=1602316548"></script>
-      <script src="sbs2-markup/highlight.js?v=1602316548"></script>
-      <script src="sbs2-markup/parse.js?v=1602316548"></script>
-      <script src="sbs2-markup/render.js?v=1602316548"></script>
+      <script src="libbo.js?v=1602369646"></script>
+      <script src="dom.js?v=1602369646"></script>
+      <script src="api.js?v=1602369646"></script>
+      <script src="index.js?v=1602369646"></script>
+      <script src="sbs2-markup/highlight.js?v=1602369646"></script>
+      <script src="sbs2-markup/parse.js?v=1602369646"></script>
+      <script src="sbs2-markup/render.js?v=1602369646"></script>
       <!-- LOC:STYLE -->
-      <link rel="stylesheet" href="index.css?v=1602316548" />
+      <link rel="stylesheet" href="index.css?v=1602369646" />
       <script>
 //Scripts for templates/THIS file etc
 function loglevel(el, replace)
@@ -46,6 +46,27 @@ function selectOptionSetup(el, replace)
       });
    }
    return el.value;
+}
+var ttoic = { 
+   "chat" : "commenting", "@discussion": "commenting",
+   "resource" : "file-text", "@page": "file-text", "@page.resource": "file-text",
+   "documentation" : "tag", "@page.documentation" : "tag",
+   "program" : "laptop", "@page.program" : "laptop",
+   "tutorial" : "question", "@page.tutorial" : "question",
+   "userpage" : "user", "@page.user" : "user", "@user.page" : "user"
+};
+function typeToIcon(el, replace)
+{
+   replace = replace || "UNDEFINED";
+   if(!el.origicon)
+      el.origicon = el.getAttribute("uk-icon");
+   if(replace)
+   {
+      el.curicon = replace;
+      el.setAttribute("uk-icon", el.origicon + ";icon: " + 
+         (ttoic[replace] || "close"));
+   } 
+   return el.curicon;
 }
 function simpleAction(el, replace)
 {
@@ -780,9 +801,15 @@ function retext(el, attr)
          <a id="discussionuser" class="uk-flex-none" data-userlink="href" data-spa>
             <img data-avatar="src" width=40>
          </a>
-         <li id="subcat"><a data-link="href" data-spa data-name=".textContent">
-            </a></li>
+         <div id="subcat" class="uk-flex uk-flex-middle">
+            <span uk-icon="icon: folder; ratio: 1.25" class="uk-margin-small-right
+               uk-flex-none"></span>
+            <a data-link="href" data-spa data-name=".textContent"
+               class="uk-link-text title"></a>
+         </div>
          <div id="pageitem" class="uk-flex uk-flex-wrap uk-flex-middle">
+            <span class="uk-flex-none uk-margin-small-right" data-type=".typeToIcon" 
+               uk-icon="ratio: 1.25"></span>
             <a class="uk-width-expand title uk-link-text" data-link="href" data-spa data-name=".textContent"></a>
             <time data-time=".textContent" class="uk-flex-none uk-text-meta"></time>
             <a class="uk-flex-none notext avatar" data-spa data-userlink="href"><img data-avatar="src" width=25></a>
@@ -854,11 +881,11 @@ function retext(el, attr)
          </select>
          <!-- The order here is the order I want them on the homepage too -->
          <select id="pagetypeselect" data-name="name" class="uk-select">
-            <option value="@page.program">Program</option>
-            <option value="@discussion">Chat</option>
-            <option value="@page.tutorial">Tutorial</option>
-            <option value="@page.documentation">Documentation</option>
-            <option value="@page" selected>General Page</option>
+            <option value="program">Program</option>
+            <option value="chat">Chat</option>
+            <option value="tutorial">Tutorial</option>
+            <option value="documentation">Documentation</option>
+            <option value="resource" selected>General Page</option>
          </select>
          <div id="youtube">
             <div class="uk-flex uk-flex-middle">
@@ -888,7 +915,7 @@ function retext(el, attr)
             BASIC programs on your Nintendo 3DS, Wii U, and Switch! 
             This website is in development! There's a lot of missing features, 
             but we're gonna keep adding stuff until it's good!</p>
-            <h3><a href="?p=category-0" data-spa>Browse</a></h3>
+            <h3><a href="?p=category-0" data-spa>Browse Everything</a></h3>
             <div class="" data-homehistory></div>
             <a href="?p=test" data-spa>Test area</a>
          </div>
@@ -962,7 +989,7 @@ function retext(el, attr)
                </ul>
             </div>
             <p class="uk-text-meta uk-margin-remove-top" data-description=".textContent"></p>
-            <li data-subcats class="lightblock uk-list uk-list-square uk-list-collapse"></li>
+            <div data-subcats class="lightblock"></div>
             <div data-pages class="uk-margin-top">
                <p data-nopages class="">
                   <span uk-icon="icon: database" class="uk-margin-small-right"></span>
@@ -987,10 +1014,10 @@ function retext(el, attr)
          <span>Parent Category:</span>
          <div data-categoryselect name="parentId"></div>
       </label>
-      <label class="uk-form-label" uk-margin>
+      <!--<label class="uk-form-label" uk-margin>
          <span>Allowed Page Types:</span>
          <input class="uk-input" name="values.allowedTypes">
-      </label>
+      </label>-->
       <label class="uk-form-label" uk-margin>
          <span class="uk-flex uk-flex-middle">
             <span class="uk-margin-small-right">Permissions:</span> 
