--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
       <script src="uikit-3.5.5/js/uikit.min.js"></script>
       <script src="uikit-3.5.5/js/uikit-icons.min.js"></script>
       <!-- LOC:SCRIPT -->
-      <script src="libbo.js?v=1602456583"></script>
-      <script src="dom.js?v=1602456583"></script>
-      <script src="api.js?v=1602456583"></script>
-      <script src="index.js?v=1602456583"></script>
-      <script src="sbs2-markup/highlight.js?v=1602456583"></script>
-      <script src="sbs2-markup/parse.js?v=1602456583"></script>
-      <script src="sbs2-markup/render.js?v=1602456583"></script>
+      <script src="libbo.js?v=1602461105"></script>
+      <script src="dom.js?v=1602461105"></script>
+      <script src="api.js?v=1602461105"></script>
+      <script src="index.js?v=1602461105"></script>
+      <script src="sbs2-markup/highlight.js?v=1602461105"></script>
+      <script src="sbs2-markup/parse.js?v=1602461105"></script>
+      <script src="sbs2-markup/render.js?v=1602461105"></script>
       <!-- LOC:STYLE -->
-      <link rel="stylesheet" href="index.css?v=1602456583" />
+      <link rel="stylesheet" href="index.css?v=1602461105" />
       <script>
 //Scripts for templates/THIS file etc
 function loglevel(el, replace)
@@ -52,7 +52,7 @@ var ttoic = {
    "resource" : "file-text", //"@page": "file-text", "@page.resource": "file-text",
    "documentation" : "tag", //"@page.documentation" : "tag",
    "program" : "laptop", //"@page.program" : "laptop",
-   "tutorial" : "question", //"@page.tutorial" : "question",
+   "tutorial" : "info", //"@page.tutorial" : "question",
    "userpage" : "user" //"@page.user" : "user", "@user.page" : "user"
 };
 function typeToIcon(el, replace)
@@ -804,14 +804,13 @@ function retext(el, attr)
             <img data-avatar="src" width=40>
          </a>
          <div id="subcat" class="uk-flex uk-flex-middle">
-            <span uk-icon="icon: folder; ratio: 1.25" class="uk-margin-small-right
+            <span uk-icon="icon: folder; ratio: 1.0" class="uk-margin-small-right
                uk-flex-none"></span>
             <a data-link="href" data-spa data-name=".textContent"
                class="uk-link-text title"></a>
          </div>
          <div id="pageitem" class="uk-flex uk-flex-wrap uk-flex-middle">
-            <span class="uk-flex-none uk-margin-small-right" data-type=".typeToIcon" 
-               uk-icon="ratio: 1.25"></span>
+            <span class="uk-flex-none pageicon" data-type=".typeToIcon" uk-icon="ratio: 1.0"></span>
             <a class="uk-width-expand title uk-link-text" data-link="href" data-spa data-name=".textContent"></a>
             <time data-time=".textContent" class="uk-flex-none uk-text-meta"></time>
             <a class="uk-flex-none notext avatar" data-spa data-userlink="href"><img data-avatar="src" width=25></a>
