--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
       <script src="uikit-3.5.5/js/uikit.min.js"></script>
       <script src="uikit-3.5.5/js/uikit-icons.min.js"></script>
       <!-- LOC:SCRIPT -->
-      <script src="libbo.js?v=1602481354"></script>
-      <script src="dom.js?v=1602481354"></script>
-      <script src="api.js?v=1602481354"></script>
-      <script src="index.js?v=1602481354"></script>
-      <script src="sbs2-markup/highlight.js?v=1602481354"></script>
-      <script src="sbs2-markup/parse.js?v=1602481354"></script>
-      <script src="sbs2-markup/render.js?v=1602481354"></script>
+      <script src="libbo.js?v=1602484547"></script>
+      <script src="dom.js?v=1602484547"></script>
+      <script src="api.js?v=1602484547"></script>
+      <script src="index.js?v=1602484547"></script>
+      <script src="sbs2-markup/highlight.js?v=1602484547"></script>
+      <script src="sbs2-markup/parse.js?v=1602484547"></script>
+      <script src="sbs2-markup/render.js?v=1602484547"></script>
       <!-- LOC:STYLE -->
-      <link rel="stylesheet" href="index.css?v=1602481354" />
+      <link rel="stylesheet" href="index.css?v=1602484547" />
       <script>
 //Scripts for templates/THIS file etc
 function loglevel(el, replace)
@@ -730,6 +730,8 @@ function retext(el, attr)
          </div>
          <!-- ROOT discussion, holds the whole thing? -->
          <div id="discussion" data-discussionid="data-did" data-id="id" class="">
+            <p data-nocomments class="uk-text-meta uk-padding-small uk-text-center
+            uk-width-expand">No comments (yet!)</p>
             <!-- A placeholder, so inserting will always have a place to stop searching -->
             <div data-tmpl="messageframe" data-tmpld='{"userid":"0"}' style="display: none">
                <div data-tmpl="singlemessage" data-tmpld='{"messageid":"0"}'>
