Instant full chat + full content buttons

--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
       <script src="uikit-3.5.5/js/uikit.min.js"></script>
       <script src="uikit-3.5.5/js/uikit-icons.min.js"></script>
       <!-- LOC:SCRIPT -->
-      <script src="libbo.js?v=1602484547"></script>
-      <script src="dom.js?v=1602484547"></script>
-      <script src="api.js?v=1602484547"></script>
-      <script src="index.js?v=1602484547"></script>
-      <script src="sbs2-markup/highlight.js?v=1602484547"></script>
-      <script src="sbs2-markup/parse.js?v=1602484547"></script>
-      <script src="sbs2-markup/render.js?v=1602484547"></script>
+      <script src="libbo.js?v=1602485056"></script>
+      <script src="dom.js?v=1602485056"></script>
+      <script src="api.js?v=1602485056"></script>
+      <script src="index.js?v=1602485056"></script>
+      <script src="sbs2-markup/highlight.js?v=1602485056"></script>
+      <script src="sbs2-markup/parse.js?v=1602485056"></script>
+      <script src="sbs2-markup/render.js?v=1602485056"></script>
       <!-- LOC:STYLE -->
-      <link rel="stylesheet" href="index.css?v=1602484547" />
+      <link rel="stylesheet" href="index.css?v=1602485056" />
       <script>
 //Scripts for templates/THIS file etc
 function loglevel(el, replace)
@@ -184,13 +184,13 @@ function retext(el, attr)
                   </div>
                   <div id="maincontentbarcontrols" class="uk-flex uk-height-1-1 uk-flex-middle">
                      <a href="#" class="ufk-text-primary" id="fulldiscussionmode"
-                        uk-icon="icon: triangle-up; ratio: 1.2"></a>
+                        uk-icon="icon: triangle-up; ratio: 1.2" uk-tooltip="Full chat"></a>
                      <a href="#" class="ufk-text-primary" id="fullcontentmode"
-                        uk-icon="icon: triangle-down; ratio: 1.2"></a>
+                        uk-icon="icon: triangle-down; ratio: 1.2" uk-tooltip="Full content"></a>
                      <a href="#" class="ufk-text-primary" id="splitmodediscussion"
-                        uk-icon="icon: comments; ratio: 1.1" ></a>
+                        uk-icon="icon: comments; ratio: 1.1" uk-tooltip="Show chat"></a>
                      <a href="#" class="ufk-text-primary" id="splitmodecontent"
-                        uk-icon="icon: file-text; ratio: 1.2" ></a>
+                        uk-icon="icon: file-text; ratio: 1.2" uk-tooltip="Show content"></a>
                   </div>
                </div> 
                <!-- Need separate containers because lazy: one is for user
